// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identify-with-password Client-side field change validation tests fails client side validation with no inputs 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
<<<<<<< HEAD
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-18"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-describedby=" identifier-error  "
                            aria-invalid="true"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-23"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="identifier-error"
                            id="identifier-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error  "
                            aria-invalid="true"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            required=""
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-31"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-37"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-39"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-40"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-41"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-42"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-44"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-46"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-48"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-54"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-46"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
<<<<<<< HEAD
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-18"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-describedby=" identifier-error  "
                            aria-invalid="true"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-23"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="identifier-error"
                            id="identifier-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error  "
                            aria-invalid="true"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            required=""
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-31"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-37"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-39"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-40"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-41"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-42"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-44"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-46"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-48"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-54"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-46"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password Client-side field change validation tests should attempt to submit page with all required fields empty and type in one of the required fields to remove error 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
<<<<<<< HEAD
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 16 16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M13.983 14.6471C13.4706 15 12.6329 15 10.9575 15H5.04248C3.36707 15 2.52937 15 2.01699 14.6471C1.56939 14.3387 1.26655 13.8615 1.17816 13.3252C1.07698 12.7114 1.43367 11.9534 2.14706 10.4374L5.10455 4.15277C6.02878 2.18879 6.49089 1.2068 7.12576 0.898255C7.6777 0.630012 8.32225 0.630012 8.87419 0.898255C9.50906 1.2068 9.97117 2.18879 10.8954 4.15277L13.8529 10.4374C14.5663 11.9534 14.923 12.7114 14.8218 13.3252C14.7334 13.8615 14.4306 14.3387 13.983 14.6471ZM7.99998 10C7.72383 10 7.49998 9.77614 7.49998 9.5L7.49998 5H8.49998L8.49998 9.5C8.49998 9.77614 8.27612 10 7.99998 10ZM7.99998 13C8.14831 13 8.29332 12.956 8.41665 12.8736C8.53999 12.7912 8.63612 12.6741 8.69288 12.537C8.74965 12.4 8.7645 12.2492 8.73556 12.1037C8.70662 11.9582 8.6352 11.8246 8.53031 11.7197C8.42542 11.6148 8.29178 11.5434 8.14629 11.5144C8.00081 11.4855 7.85001 11.5003 7.71296 11.5571C7.57592 11.6139 7.45878 11.71 7.37637 11.8333C7.29396 11.9567 7.24998 12.1017 7.24998 12.25C7.24998 12.4489 7.32899 12.6397 7.46964 12.7803C7.6103 12.921 7.80106 13 7.99998 13Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-15"
                  >
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-18"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-describedby=" identifier-error  "
                            aria-invalid="true"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-23"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="identifier-error"
                            id="identifier-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-describedby=" credentials.passcode-error  "
                            aria-invalid="true"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            required=""
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-31"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-32"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <p
                            class="MuiFormHelperText-root Mui-error emotion-25"
                            data-se="credentials.passcode-error"
                            id="credentials.passcode-error"
                            role="alert"
                          >
                            This field cannot be left blank
                          </p>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-37"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-38"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-39"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-40"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-41"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-42"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-44"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-46"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-48"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-50"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-54"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-46"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password renders form with focus 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
<<<<<<< HEAD
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-18"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-17"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-18"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            required=""
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-24"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-25"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-26"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-28"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-30"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-31"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-32"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-33"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-35"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-39"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-41"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-42"
                    >
                      <div
                        class="MuiBox-root emotion-43"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-45"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-43"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password renders form without focus 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
<<<<<<< HEAD
              <h1
                class="MuiTypography-root MuiTypography-h1 emotion-6"
              />
            </div>
            <div
              class="MuiBox-root emotion-7"
            >
              <form
                aria-live="polite"
                class="o-form MuiBox-root emotion-8"
                data-se="o-form"
                novalidate=""
=======
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
>>>>>>> 90c119bc4 (added odyssey legacy alias package)
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h2
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          id="identify_Title_Sign_In_aut1egri5t7iomJ3l1d7_1"
                          tabindex="-1"
                        >
                          Sign In
                        </h2>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="identifier"
                        >
                          Username
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="username"
                            class="MuiInputBase-input emotion-18"
                            data-se="identifier"
                            id="identifier"
                            name="identifier"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-2"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-16"
                          data-shrink="false"
                          for="credentials.passcode"
                        >
                          Password
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-17"
                          dir="ltr"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="current-password"
                            class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-18"
                            data-se="credentials.passcode"
                            id="credentials.passcode"
                            name="credentials.passcode"
                            required=""
                            type="password"
                          />
                          <div
                            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-24"
                          >
                            <button
                              aria-controls="credentials.passcode"
                              aria-label="Show password"
                              aria-pressed="false"
                              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium emotion-25"
                              data-mui-internal-clone-element="true"
                              tabindex="0"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-26"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <fieldset
                        class="MuiFormControl-root MuiFormControl-marginNormal emotion-28"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-29"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-30"
                          >
                            <input
                              class="PrivateSwitchBase-input emotion-31"
                              data-indeterminate="false"
                              data-se="rememberMe"
                              data-se-for-name="rememberMe"
                              id="rememberMe"
                              name="rememberMe"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-32"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-33"
                          >
                            Keep me signed in
                          </span>
                        </label>
                      </fieldset>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-35"
                        data-type="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign in
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                        data-se="forgot-password"
                        role="link"
                        type="button"
                      >
                        Forgot password?
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <a
                        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-39"
                        data-se="help"
                        href="http://localhost:3000/help/login"
                      >
                        Help
                      </a>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-41"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-42"
                    >
                      <div
                        class="MuiBox-root emotion-43"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-45"
                            data-se="signup-info"
                            id="identify_Description_Dont_have_an_account_aut1egri5t7iomJ3l1d7_10"
                          >
                            Don't have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-43"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-37"
                          data-se="enroll"
                          role="link"
                          type="button"
                        >
                          Sign up
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`identify-with-password renders the loading state first 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <span
                    aria-label="Processing..."
                    aria-valuetext="Processing..."
                    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-10"
                    role="progressbar"
                    style="width: 1.14285714rem; height: 1.14285714rem;"
                  >
                    <svg
                      class="MuiCircularProgress-svg emotion-11"
                      viewBox="22 22 44 44"
                    >
                      <circle
                        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-12"
                        cx="44"
                        cy="44"
                        fill="none"
                        r="18"
                        stroke-width="8"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
